<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2011 wgx731 Republic Polytechnic Assignment 1 Project

		Licensed under the Apache License, Version 2.0 (the "License"); you
		may not use this file except in compliance with the License. You may
		obtain a copy of the License at

		http://www.apache.org/licenses/LICENSE-2.0 Unless required by
		applicable law or agreed to in writing, software distributed under the
		License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
		CONDITIONS OF ANY KIND, either express or implied. See the License for
		the specific language governing permissions and limitations under the
		License.
	-->
	<!--
		This is Review layout.
	-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<TextView android:id="@+id/rName" style="@style/listFont"
			android:gravity="center_horizontal" />
		<TextView android:id="@+id/rb1_lb" style="@style/lbFont"
			android:text="@string/rb1_lb" android:layout_below="@id/rName" />
		<RatingBar android:id="@+id/rb1" style="@style/rRatingBar"
			android:layout_below="@id/rb1_lb" />
		<TextView android:id="@+id/rb2_lb" style="@style/lbFont"
			android:text="@string/rb2_lb" android:layout_below="@id/rb1" />
		<RatingBar android:id="@+id/rb2" style="@style/rRatingBar"
			android:layout_below="@id/rb2_lb" />
		<TextView android:id="@+id/rb3_lb" style="@style/lbFont"
			android:text="@string/rb3_lb" android:layout_below="@id/rb2" />
		<RatingBar android:id="@+id/rb3" style="@style/rRatingBar"
			android:layout_below="@id/rb3_lb" />
		<TextView android:id="@+id/result" style="@style/listFont"
			android:gravity="center_horizontal" android:layout_below="@id/rb3"
			android:text="@string/result" />
		<Button android:id="@+id/save" android:layout_below="@id/result"
			android:text="@string/save" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_centerHorizontal="true"/>
	</RelativeLayout>
</ScrollView>
